fix blur on mobile nav

--- a/style.css
+++ b/style.css
@@ -365,8 +365,8 @@
   }
 
   .project-close {
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
     display: flex;
     padding: 8px;
     align-items: flex-start;
